misc: 前端和中端升级到 Java 17